--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,19 @@ plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.21' apply false
+    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
+}
+
+group = "io.github.being-eyram"
+version = findProperty("LIBRARY_VERSION") ? findProperty("LIBRARY_VERSION") : "1.0-SNAPSHOT"
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/servicee/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+            username = findProperty("OSSRH_USERNAME")
+            password = findProperty("OSSRH_PASSWORD")
+        }
+    }
 }
