--- a/loaders/build.gradle
+++ b/loaders/build.gradle
@@ -66,6 +66,33 @@ def signingKeyPassphrase = findProperty("SIGNING_KEY_PASSPHRASE")
 
 
 
+//task javadoc(type: Javadoc) {
+//    doFirst {
+//        configurations.implementation
+//                .filter { it.name.endsWith(".aar") }
+//                .each { aar ->
+//                    copy {
+//                        from zipTree(aar)
+//                        include "**/classes.jar"
+//                        into "$buildDir/tmp/aarsToJars/${aar.name.replace(".aar", "")}/"
+//                    }
+//                }
+//    }
+//
+//    configurations.implementation.setCanBeResolved(true)
+//    source = android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//    classpath += configurations.implementation
+//    classpath += fileTree(dir: "$buildDir/tmp/aarsToJars/")
+//    destinationDir = file("${project.buildDir}/outputs/javadoc/")
+//    failOnError false
+//    exclude "**/BuildConfig.java"
+//    exclude "**/R.java"
+//}
+//
+task javadocJar(type: Jar) {
+    archiveClassifier.set("javadoc")
+}
 
 
 task androidSourcesJar(type: Jar) {
@@ -87,6 +114,8 @@ afterEvaluate {
                 if (project.plugins.findPlugin("com.android.library")) {
                     from components.release
                 }
+
+                artifact androidSourcesJar
 
                 pom {
                     name = artifactId
