--- a/loaders/build.gradle
+++ b/loaders/build.gradle
@@ -157,6 +157,8 @@ afterEvaluate {
     }
 }
 
+println(signingKey)
+
 signing {
     useInMemoryPgpKeys(signingKeyId, signingKey, signingKeyPassphrase)
     sign publishing.publications
