--- a/loaders/build.gradle
+++ b/loaders/build.gradle
@@ -57,42 +57,11 @@ dependencies {
 }
 
 
-def artifactId = "loaderskit"
 def ossrhUsername = findProperty("OSSRH_USERNAME")
 def ossrhPassword = findProperty("OSSRH_PASSWORD")
 def signingKeyId = findProperty("SIGNING_KEY_ID")
 def signingKey = findProperty("SIGNING_KEY")
 def signingKeyPassphrase = findProperty("SIGNING_KEY_PASSPHRASE")
-
-
-
-//task javadoc(type: Javadoc) {
-//    doFirst {
-//        configurations.implementation
-//                .filter { it.name.endsWith(".aar") }
-//                .each { aar ->
-//                    copy {
-//                        from zipTree(aar)
-//                        include "**/classes.jar"
-//                        into "$buildDir/tmp/aarsToJars/${aar.name.replace(".aar", "")}/"
-//                    }
-//                }
-//    }
-//
-//    configurations.implementation.setCanBeResolved(true)
-//    source = android.sourceSets.main.java.srcDirs
-//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-//    classpath += configurations.implementation
-//    classpath += fileTree(dir: "$buildDir/tmp/aarsToJars/")
-//    destinationDir = file("${project.buildDir}/outputs/javadoc/")
-//    failOnError false
-//    exclude "**/BuildConfig.java"
-//    exclude "**/R.java"
-//}
-//
-//task javadocJar(type: Jar) {
-//    archiveClassifier.set("javadoc")
-//}
 
 
 task androidSourcesJar(type: Jar) {
@@ -107,13 +76,10 @@ afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
+                from components.release
                 groupId = group
-                artifactId = artifactId
+                artifactId = "loaderskit"
                 version = version
-
-                if (project.plugins.findPlugin("com.android.library")) {
-                    from components.release
-                }
 
                 pom {
                     name = artifactId
@@ -140,10 +106,10 @@ afterEvaluate {
                 }
             }
         }
+
         repositories {
             maven {
                 name = "sonatype"
-
                 def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
                 def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots"
                 url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
