--- a/loaders/build.gradle
+++ b/loaders/build.gradle
@@ -63,6 +63,9 @@ def signingKeyId = findProperty("SIGNING_KEY_ID")
 def signingKey = findProperty("SIGNING_KEY")
 def signingKeyPassphrase = findProperty("SIGNING_KEY_PASSPHRASE")
 
+group = "io.github.being-eyram"
+version = "1.0-SNAPSHOT"
+
 
 task androidSourcesJar(type: Jar) {
     archiveClassifier.set("sources")
@@ -114,6 +117,8 @@ afterEvaluate {
                 def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots"
                 url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
 
+                println(version)
+
                 credentials {
                     username = ossrhUsername
                     password = ossrhPassword
@@ -122,8 +127,6 @@ afterEvaluate {
         }
     }
 }
-
-println(signingKey)
 
 signing {
     useInMemoryPgpKeys(signingKeyId, signingKey, signingKeyPassphrase)
