--- a/loaders/build.gradle
+++ b/loaders/build.gradle
@@ -113,8 +113,8 @@ afterEvaluate {
         repositories {
             maven {
                 name = "sonatype"
-                def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
-                def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots"
+                def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/"
+                def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
                 url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
 
                 println(version)
