--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
 nexusPublishing {
     repositories {
         sonatype {
-            nexusUrl.set(uri("https://s01.oss.sonatype.org/servicee/local/"))
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
             snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
             username = findProperty("OSSRH_USERNAME")
             password = findProperty("OSSRH_PASSWORD")
