--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ plugins {
     id "io.github.gradle-nexus.publish-plugin" version "1.3.0"
 }
 
+group = "io.github.being-eyram" // this needs to be at this level
+version = "1.0-SNAPSHOT"
+
+
 nexusPublishing {
     repositories {
         sonatype {
