--- a/loaders/build.gradle
+++ b/loaders/build.gradle
@@ -15,6 +15,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        versionName findProperty("VERSION_NAME")
     }
 
     buildTypes {
@@ -62,7 +63,7 @@ def ossrhPassword = findProperty("OSSRH_PASSWORD")
 def signingKeyId = findProperty("SIGNING_KEY_ID")
 def signingKey = findProperty("SIGNING_KEY")
 def signingKeyPassphrase = findProperty("SIGNING_KEY_PASSPHRASE")
-version = findProperty("LIBRARY_VERSION")
+
 
 task androidSourcesJar(type: Jar) {
     archiveClassifier.set("sources")
