Add staging profile id

--- a/loaders/build.gradle
+++ b/loaders/build.gradle
@@ -64,6 +64,8 @@ def signingKeyId = findProperty("SIGNING_KEY_ID")
 def signingKey = findProperty("SIGNING_KEY")
 def signingKeyPassphrase = findProperty("SIGNING_KEY_PASSPHRASE")
 
+def version = "1.7-SNAPSHOT"
+
 
 task androidSourcesJar(type: Jar) {
     archiveClassifier.set("sources")
@@ -80,7 +82,7 @@ afterEvaluate {
                 from components.release
                 groupId = group
                 artifactId = "loaderskit"
-                version = findProperty("VERSION_NAME")
+                version = version
 
                 pom {
                     name = artifactId
