--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   publish:
-    name:  Publish
+    name: Publish
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -36,3 +36,4 @@ jobs:
           ORG_GRADLE_PROJECT_SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
           ORG_GRADLE_PROJECT_SIGNING_KEY_PASSPHRASE: ${{ secrets.SIGNING_KEY_PASSPHRASE }}
           ORG_GRADLE_PROJECT_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+          ORG_GRADLE_PROJECT_STAGING_PROFILE_ID: ${{ secrets.STAGING_ID }}
