--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ group = "io.github.being-eyram" // this needs to be at this level
 nexusPublishing {
     repositories {
         sonatype {
+            stagingProfileId=findProperty("STAGING_PROFILE_ID")
             nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
             snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
             username = findProperty("OSSRH_USERNAME")
