--- a/loaders/build.gradle
+++ b/loaders/build.gradle
@@ -63,7 +63,7 @@ def ossrhPassword = findProperty("OSSRH_PASSWORD")
 def signingKeyId = findProperty("SIGNING_KEY_ID")
 def signingKey = findProperty("SIGNING_KEY")
 def signingKeyPassphrase = findProperty("SIGNING_KEY_PASSPHRASE")
-
+def VERSION = '1.9-SNAPSHOT'
 
 
 task androidSourcesJar(type: Jar) {
@@ -81,7 +81,7 @@ afterEvaluate {
                 from components.release
                 groupId = group
                 artifactId = "loaderskit"
-                version = '1.7-SNAPSHOT'
+                version = VERSION
 
                 pom {
                     name = artifactId
@@ -114,7 +114,7 @@ afterEvaluate {
                 name = "sonatype"
                 def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/"
                 def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
-                url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
+                url = VERSION.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
 
                 println(version)
 
